--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ h1 {
   list-style: none;
   float: right;
  }
-body:{
+body {
   background-image:url("https://media.tenor.co/images/360f495a4baa4e8e40d6abdd2aa8a50d/raw");
   background-repeat : no-repeat;
   background-size: cover;
